test/testdata/e2e/http_filter_sds_secrets/cluster.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: oauth2-provider
spec:
  name: oauth2-provider
  connect_timeout: 5s
  type: STATIC
  load_assignment:
    cluster_name: oauth2-provider
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8083
