test/testdata/e2e/http_filter_sds_secrets/listener.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: http-oauth2
spec:
  name: http-oauth2
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8082
