test/testdata/e2e/http_filter_sds_secrets/secret.yaml
apiVersion: v1
kind: Secret
type: Opaque
metadata:
  name: oauth2-credentials
  labels:
    envoy.kaasops.io/secret-type: sds-cached
stringData:
  token: e2e-client-secret
  hmac: e2e-hmac-secret
